# gloview

./: CMakeLists.txt  README.md  flake.nix  hyprpm.toml
packaging/aur/: .SRCINFO  PKGBUILD  gloview.install
src/: layout.cpp  layout.hpp  main.cpp  overview.cpp  overview.hpp
